--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 @keyframes bounce {
     0%, 100% {
-        translateY(0);
+        transform: translateY(0);
     }
     50% { 
-        transform:translateY(100);
+        transform: translateY(100px);
     }
 }
 
